<resources>
    <string name="app_name">房屋抗震能力即时评估系统</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密 码</string>
    <string name="prompt_confirmpassword">再次输入密码</string>
    <string name="prompt_email">输入邮箱信息</string>
    <string name="action_sign_in">登    陆</string>
    <string name="action_regist">注    册</string>
    <string name="action_sign_in_short">登 录</string>
    <string name="error_invalid_email">登录名不能为空</string>
    <string name="error_invalid_password">密码不能为空</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">您必须选择此项目</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_goregister">没有账号？注册一个</string>
</resources>
